Fix license entries in pyproject.toml

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,8 @@ classifiers = [
     "Intended Audience :: Developers",
     "Topic :: Software Development :: Libraries :: Python Modules",
 ]
-license = {file = "LICENSE"}
+license = "MIT"
+license-files = [ "LICENSE" ]
 dependencies = []
 
 
