Change license to mit-0

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,7 @@ classifiers = [
     "Intended Audience :: Developers",
     "Topic :: Software Development :: Libraries :: Python Modules",
 ]
-license = "MIT"
+license = "MIT-0"
 license-files = [ "LICENSE" ]
 
 [project.urls]
