--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,5 +32,5 @@ pythonpath = [
 ]
 
 [build-system]
-requires = ["uv_build>=0.7.19,<0.8.0"]
+requires = ["uv_build>=0.8.0"]
 build-backend = "uv_build"
